Elementos se van pintando en el HTML y se actualiza el precio

--- a/index.html
+++ b/index.html
@@ -40,30 +40,13 @@
 
 
     <div class="container container-items">
-
-        <!-- EXAMPLE CARRITO DELETE-->
-
-        <div class="row row-item">
-            <div class="col">
-                <div class="item-cart-fruta d-flex justify-content-around item-cart" draggable="true">
-                    <div>
-                        <img class="item-img" src="img/manzana.png" alt="manzana">
-                        <span class="badge badge-pill badge-light itemPriceCart">7€</span>
-                    </div>
-                    <button type="button" class="btn btn-danger align-self-center" id="btn-delete">X</button>
-                </div>
-            </div>
-        </div>
-
-        <!-- END EXAMPLE -->
-
     </div>
     <div class="container">
         <div class="row cart">
-            <div class="col d-flex justify-content-start" id="cart">
+            <div class="col d-flex justify-content-center align-items-center" id="cart">
                 <img src="img/carrito.png" alt="carrito">
-                <p class="d-inline">Total:</p>
-                <p id="costeTotal" class="d-inline">0€</p>
+                <p class="d-flex">Total:</p>
+                <p class="costeTotal">0€</p>
             </div>
         </div>
         <div class="row">
